# PyTorch-Machine-Learning_Chapter-04_MNIST-Classification

./: .gitattributes  .gitignore  README.md  infer.py  pyproject.toml  show_mnist.py  train.py
configs/: train.yaml
data/: __init__.py  mnist.py
engine/: __init__.py  trainer.py
models/: __init__.py  classifiers.py
utils/: __init__.py  checkpoint.py  seed.py
