[project]
name = "pytorch-machine-learning-chapter04"
version = "0.1.0"
description = "MNIST classification tutorial with PyTorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "tensorboard>=2.16",
    "torch>=2.3",
    "torchvision>=0.18",
    "tqdm>=4.66",
]
